feat: better queries JPQL is 4 times faster than criteria
